mp10/grade.txt
Compilation Results:
********************
sparsemat.c: In function ‘add_tuples’:
sparsemat.c:43:9: error: ‘retmat’ undeclared (first use in this function)
  return retmat;
         ^~~~~~
sparsemat.c:43:9: note: each undeclared identifier is reported only once for each function it appears in
sparsemat.c: In function ‘mult_tuples’:
sparsemat.c:49:12: error: ‘retmat’ undeclared (first use in this function)
     return retmat;
            ^~~~~~
sparsemat.c: In function ‘add_tuples’:
sparsemat.c:44:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
sparsemat.c: In function ‘mult_tuples’:
sparsemat.c:51:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [Makefile:16: sparsemat.o] Error 1

load_tuples test: 10 pts total

gv_tuples test: 6 pts total

set_tuples test: 44 pts total

add_tuples test: 15 pts total

save_tuples test: 10 pts total

Printing diff of save tuples. If empty, 10 pts
diff: grade/save_test_tuples.txt: No such file or directory

0
destroy_tuples test: 5 pts total
Printing valgrind output. If no memory leaks/errors, 5 pts
valgrind: ./test0: No such file or directory

Grade:
******
Late submission: 0
Functionality: 0
Comments and Style: 0 
Intro paragraph: 0 
Total: 0 
